<resources>
    <string name="app_name">Restaurant_SigloXXI_v3</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresa</string>
    <string name="action_sign_in_short">Ingresa</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">No es un correo valido</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="login_failed">"Fallo el inicio de sesion"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saludo">¡Hola! Qué gusto verte de nuevo.</string>
    <string name="recuperar_pass">¿Has olvidado tu contraseña?</string>
    <string name="boton_registrate">Registrate</string>
    <string name="registrate_titulo">Registrate</string>
    <string name="app_name_1">Restaurant siglo XXI</string>
    <string name="continuar">Continuar</string>
</resources>